--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,39 @@
 * {
+    font-family: Roboto;
     margin: 0;
     padding: 0;
+}
+
+.bg-base {
+    background-color:#1f2937;
+}
+
+.flex-row {
+    display:flex;
+    flex-direction: row;
+}
+
+container {
+    width: 900px;
+}
+
+.space-between {
+    justify-content: space-between;
+}
+
+.nav-links{
+    color: #e5e7eb;
+    gap: 2rem;
+    font-size: 18px;
+    font-weight: 400;
+}
+
+.header {
+    padding: 1rem;
+}
+
+.header-logo {
+    font-size: 24px;
+    color: #F9FAF8;
+    font-weight: 600;
 }
