--- a/styles.css
+++ b/styles.css
@@ -6,12 +6,15 @@
 }
 
 
-/* ----------------------- Colours ----------------------- */
+/* ----------------------- Colors ----------------------- */
 
 .bg-base {
     background-color:#1f2937;
 }
 
+.bg-action {
+    background-color: #3882f6;
+}
 
 /* ----------------------- Sections ----------------------- */
 
@@ -20,11 +23,14 @@ a {
     color: #e5e7eb;
 }
 
-container {
-    max-width: 900px;
+.container {
+    width: 900px;
 }
 
-
+p {
+    margin-top: 1rem;
+    margin-bottom: 1rem;
+}
 
 /* ----------------------- Utility ----------------------- */
 .space-between {
@@ -33,6 +39,22 @@ container {
 .flex-row {
     display:flex;
     flex-direction: row;
+    gap: 50px;
+}
+
+.secondary-text {
+    color: #e5e7eb;
+    font-size: 15px;
+}
+
+.btn-primary {
+    background-color: #3882f6;
+    padding: 0.5em 2em 0.5em 2em;
+    border-radius: 0.4rem;   
+}
+
+.flex-1 {
+    flex: 1;
 }
 /* ----------------------- Elements ----------------------- */
 
@@ -51,8 +73,29 @@ container {
     padding: 2rem;
 }
 
+.hero-h1 {
+    font-size: 48px;
+    color:#F9FAF8;
+}
+
 .header-logo {
     font-size: 24px;
     color: #F9FAF8;
     font-weight: 600;
+}
+
+.hero-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.hero-media-wrapper {
+    width:100%;
+    height: 15rem;
+}
+
+.hero-image {
+    width: 100%;
+    height: 100%;
 }
