--- a/styles.css
+++ b/styles.css
@@ -53,13 +53,25 @@ p {
     border-radius: 0.4rem;   
 }
 
+.btn-white {
+    background-color: #fff;
+    padding: 0.5em 2em 0.5em 2em;
+    border-radius: 0.4rem;
+    border: 1px solid white;
+}
+
+.btn-outline {
+    background-color: transparent;
+    border: 1px solid;
+}
+
 .flex-1 {
     flex: 1;
 }
 /* ----------------------- Elements ----------------------- */
 
 .header {
-    padding: 1rem;
+    padding: 2rem;
 }
 
 .nav-links {
@@ -69,25 +81,27 @@ p {
     font-weight: 400;
 }
 
-.hero {
-    padding: 2rem;
-}
-
-.hero-h1 {
-    font-size: 48px;
-    color:#F9FAF8;
-}
-
 .header-logo {
     font-size: 24px;
     color: #F9FAF8;
     font-weight: 600;
 }
 
+/* -------- Hero Section --------- */
+
 .hero-container {
     display: flex;
     flex-direction: row;
     align-items: center;
+}
+
+.hero {
+    padding: 4rem 2rem 8rem 2rem;
+}
+
+.hero-h1 {
+    font-size: 48px;
+    color:#F9FAF8;
 }
 
 .hero-media-wrapper {
@@ -98,4 +112,119 @@ p {
 .hero-image {
     width: 100%;
     height: 100%;
+}
+
+/* -------- Item Section --------- */
+
+.item-section {
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding-top: 4rem;
+    padding-bottom: 4rem;
+    gap: 30px;
+}
+
+.item-section-heading {
+    font-size:36px;
+    color:#1f2937;
+    font-weight: 900;
+}
+
+.item-grid {
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+}
+
+.item-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.card-subtext {
+    flex-wrap: wrap;
+    max-width: 25ch;
+    text-align: center;
+}
+
+.card-image {
+    width:10rem;
+    height: 10rem;
+    border: 5px solid #3882f6;
+    border-radius: 10px;
+}
+
+/* -------- Quote --------- */
+
+.quote-section {
+    background-color: #e5e7eb;
+    padding: 4rem 2rem 4rem 2rem;
+    display: flex;
+    align-items:center;
+}
+
+.quote-container {
+    display: flex;
+}
+
+.quote-content {
+    display: flex;
+    flex-direction: column;
+    padding-right: 20%;
+    padding-left: 20%;
+    
+}
+
+.quote-text {
+    font-size: 36px;
+    font-style: italic;
+    font-weight: 300;
+    color: #1f2937;
+}
+
+.quote-credit {
+    display: flex;
+    font-weight: bold;
+    align-self: flex-end;
+}
+
+/* -------- CTA --------- */
+.cta-block {
+    margin: 4rem 10% 4rem 10%;
+}
+
+.cta-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    padding: 2rem 4rem 2rem 4rem;
+    border-radius: 1rem;
+}
+
+.cta-heading {
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.cta-description {
+    color: white;
+}
+
+/* -------- Footer --------- */
+
+.copyright {
+    font-size: 15px;
+    color: white;
+}
+
+footer {
+    display: flex;
+    justify-content: center;
+    padding: 2rem 0 2rem 0;
 }
